deployment/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: moqui-demo-2-1-3
  namespace: moqui
  labels:
    k8s-app: moqui-demo-2-1-3
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: moqui-demo-2-1-3
  template:
    metadata:
      name: moqui-demo-2-1-3
      creationTimestamp: null
      labels:
        k8s-app: moqui-demo-2-1-3
    spec:
      containers:
        - name: moqui-demo-2-1-3
          image: moqui-demo:2.1.3
          imagePullPolicy: Never
      restartPolicy: Always
