deployment/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: moqui-demo-2-1-3
  namespace: moqui
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    k8s-app: moqui-demo-2-1-3
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer: {}
